--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,9 @@
 .header {
+  position: relative;
   background: linear-gradient(to right, #A4F0F0, #96CFEE);
   padding: 20px;
+  padding-bottom: 100px;
+  overflow: hidden;
 }
 
 .header-content {
@@ -33,8 +36,10 @@
 .platforms {
   display: flex;
   justify-content: center;
-  gap: 550px;
+  gap: 450px;
   margin-top: 20px;
+  position: relative;
+  z-index: 3;
 }
 
 .platforms span {
@@ -48,6 +53,8 @@
   text-decoration: underline;
   color: #003366;
 }
+
+
 
 @keyframes fadeIn {
   from {
@@ -78,4 +85,16 @@
   50% {
     transform: translateY(-5px);
   }
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 120px; 
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'%3E%3Cpath fill='%23FFFFFF' fill-opacity='1' d='M0,192L80,181.3C160,171,320,149,480,149.3C640,149,800,171,960,186.7C1120,203,1280,213,1360,218.7L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z'%3E%3C/path%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
