--- a/src/pages/Documentation.css
+++ b/src/pages/Documentation.css
@@ -1,30 +1,90 @@
 .documentation {
-    padding: 40px;
-  }
-  
-  .documentation h1, h2{
-    font-size: 32px;
-    color: #003366;
-    margin-bottom: 20px;
-    text-align: center;
-    
-  }
-  .documentation h3 {
-    font-size: 20px;
-    color: #333333;
-    color: #003366;
-  }
-  .documentation p {
-    font-size: 18px;
-    color: #333333;
-  }
+  padding: 40px;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #333333;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-  .documentation ol {
-    font-size: 18px;
-    color: #333333;
-  }
-  
-  .documentation a {
-    font-size: 18px;
-    color: #333333;
-  }
+.documentation h1 {
+  font-size: 36px;
+  color: #003366;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.documentation h2 {
+  font-size: 28px;
+  color: #003366;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.documentation h3 {
+  font-size: 22px;
+  color: #00509e;
+  margin-bottom: 10px;
+}
+
+.documentation p {
+  font-size: 18px;
+  margin-bottom: 20px;
+  text-align: justify;
+}
+
+.documentation ol, .documentation ul {
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.documentation li {
+  margin-bottom: 10px;
+}
+
+.documentation a {
+  color: #00509e;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.documentation a:hover {
+  color: #003366;
+  text-decoration: underline;
+}
+
+.documentation ul {
+  list-style-type: disc;
+}
+
+.documentation ol {
+  list-style-type: decimal;
+}
+
+.documentation ul li {
+  margin-left: 15px;
+}
+
+.documentation {
+  max-width: 800px;
+  margin: 0 auto;
+}
+.documentation .img {
+  display: block;
+  margin: 20px auto; 
+  max-width: 70%; 
+  height: auto; 
+  border: 1px solid #ddd; 
+  border-radius: 8px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.documentation .img:hover {
+  transform: scale(1.05); 
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
+}
+
