--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,8 @@
 .header {
   position: relative;
   background: linear-gradient(to right, #A4F0F0, #96CFEE);
-  padding: 20px;
-  padding-bottom: 100px;
+  padding: 20px 20px 100px;
+  /*padding-bottom: 100px;*/
   overflow: hidden;
 }
 
@@ -10,15 +10,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 40px;
+  /*margin-top: 40px;*/
   animation: fadeIn 1.5s ease-in-out;
 
 }
 
 .description {
-  font-size: 18px;
+  font-size: 19.5px;
   line-height: 1.6;
-  max-width: 60%;
+  max-width: 900px;
   font-weight: bold;
   color: #003366;
   animation: fadeIn 1.5s ease-in-out;
@@ -28,7 +28,6 @@
 .comp {
   width: 350px;
   height: auto;
-  margin-right: 50px;
   animation: scaleUp 1s ease-in-out;
 
 }
@@ -37,7 +36,7 @@
   display: flex;
   justify-content: center;
   gap: 450px;
-  margin-top: 20px;
+  margin: 5px 0;
   position: relative;
   z-index: 3;
 }
@@ -52,6 +51,7 @@
 .platforms span:hover {
   text-decoration: underline;
   color: #003366;
+
 }
 
 
@@ -92,9 +92,50 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 120px; 
+  width: 100vw;
+  height: 15vw;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'%3E%3Cpath fill='%23FFFFFF' fill-opacity='1' d='M0,192L80,181.3C160,171,320,149,480,149.3C640,149,800,171,960,186.7C1120,203,1280,213,1360,218.7L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z'%3E%3C/path%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media screen and (min-width: 866px){
+  .header-content{
+    justify-content: space-around;
+  }
+  .description{
+    transition-duration: 0.3s;
+    font-size: 22px;
+  }
+}
+
+
+@media screen and (min-width: 1380px){
+  .header-content{
+    justify-content: space-around;
+  }
+  .description{
+    transition-duration: 0.3s;
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 2559px){
+
+  .header{
+    padding-bottom: 50px;
+  }
+  .header-content{
+    justify-content: space-evenly;
+  }
+  .description{
+    transition-duration: 0.3s;
+    font-size: 30px;
+  }
+  .comp{
+    width: 400px;
+  }
+  .platforms span{
+    font-size: 38px;
+  }
 }
