--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -100,6 +100,9 @@
   transition-timing-function: ease;
   transition-duration: 1s;
   }
+  .header-top{
+    justify-content: space-around;
+  }
   .header-logo{
     width: 500px;
   }
