--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   background: linear-gradient(to right, #A4F0F0, #96CFEE);
-  padding: 20px 20px 100px;
+  padding: 20px 20px 7vw;
   /*padding-bottom: 100px;*/
   overflow: hidden;
 }
@@ -108,6 +108,19 @@
     font-size: 22px;
   }
 }
+@media screen and (max-width: 950px){
+  .header-content{
+    justify-content: space-around;
+  }
+  .description{
+    transition-duration: 0.3s;
+    font-size: 22px;
+  }
+  .comp{
+    margin: 0 40px;
+    width: 230px;
+  }
+}
 
 
 @media screen and (min-width: 1380px){
@@ -123,7 +136,7 @@
 @media screen and (min-width: 2559px){
 
   .header{
-    padding-bottom: 50px;
+    padding-bottom: 7vw;
   }
   .header-content{
     justify-content: space-evenly;
