--- a/src/pages/Documentation.css
+++ b/src/pages/Documentation.css
@@ -6,6 +6,9 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .documentation h1 {
@@ -64,14 +67,8 @@
   list-style-type: decimal;
 }
 
-.documentation ul li {
-  margin-left: 15px;
-}
 
-.documentation {
-  max-width: 800px;
-  margin: 0 auto;
-}
+
 .documentation .img {
   display: block;
   margin: 20px auto; 
@@ -88,3 +85,63 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
 }
 
+@media screen and (min-width: 2559px){
+
+  .documentation{
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+
+  .documentation h1 {
+    font-size: 48px;
+    color: #003366;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .documentation h2 {
+    font-size: 36px;
+    color: #003366;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-weight: bold;
+  }
+
+  .documentation h3 {
+    font-size: 28px;
+    color: #00509e;
+    margin-bottom: 10px;
+  }
+
+  .documentation p {
+    font-size: 28px;
+    margin-bottom: 20px;
+    text-align: justify;
+  }
+
+  .documentation .img {
+    display: block;
+    margin: 20px auto;
+    max-width: 80%;
+    height: auto;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .documentation ul li {
+    margin-left: 28px;
+    font-size: 24px;
+  }
+  .documentation ol li {
+    margin-left: 28px;
+    font-size: 24px;
+  }
+
+  .documentation .img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  }
+}
